2001-12-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-mailto-url): Use the property `composefunc' to
	get the function to compose a mail from `mail-user-agent'.

2001-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-load-list): Removed a bogus code for XEmacs; don't
	bind the value of `file-coding-system-for-read' if the optional
	arg is nil and `w3m-file-coding-system-for-read' is nil.

2001-12-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-lock-format1)
	(mew-shimbun-lock-format2): New variable.
	(mew-shimbun-element-body): Add argument. Display process of
	SHIMBUN status at mode-line.
	(mew-shimbun-mode-display): New inline function.
	(mew-shimbun-retrieve, mew-shimbun-retrieve-all)
	(mew-shimbun-re-retrieve-all): Call `mew-shimbun-element-body'
	with more arguments.
	(mew-shimbun-retrieve-article, mew-shimbun-re-retrieve-article):
	Display mode-line process.

2001-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3m-use-favicon): Don't bind it.

	* w3m-e21.el (w3m-use-favicon): Set it to nil anyway when Emacs is
	running in the batch mode.
	(w3m-imagick-convert-buffer): Reverted.

2001-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-imagick-convert-buffer): Don't growl errors when
	Emacs is running in the batch mode.

2001-12-18  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-group-alist): Add skk bbs.

2001-12-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-e21.el (w3m-favicon-use-cache-file): New user option.
	(w3m-favicon-cache-file): Ditto.
	(w3m-favicon-data-cache): New variable.
	(w3m-retrieve-favicon): Use `w3m-favicon-data-cache' or store it.
	(w3m-favicon-save-cache-file): New function.
	(w3m-favicon-load-cache-file): Ditto.

2001-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-e21-toolbar-configurations): Replace
	`auto-resize-tool-bar' to `auto-resize-tool-bars'.

2001-12-17  OHASHI Akira  <bg66@koka-in.org>
