@@ -1,3 +1,12 @@
+2001-12-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* w3m.el (w3m-type): Use "w3m-m17n" if exists.
+	Changed condition to decide type.
+	(w3m-decoder-alist): Use `w3m-command' for inflate command path.
+	(w3m-dirlist-cgi-program): Use `w3m-command'.
+	(w3m-dump-head-source-command-arguments) [w3mmee]: Don't
+	add "-o accept_language=xxx".
+
 2001-12-21  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-goto-mailto-url): Use the property `composefunc' to
